--- a/src/Orders_en_US.properties
+++ b/src/Orders_en_US.properties
@@ -1,3 +1,7 @@
 orders.title=Orders of user
 orders.page=Orders page for
 orders.list=List of orders
+orders.drug=drug
+orders.amount=amount
+orders.date=date
+orders.absence=No records found
