--- a/src/Recipes_en_US.properties
+++ b/src/Recipes_en_US.properties
@@ -2,3 +2,7 @@ recipes.title=Recipes by doctor
 recipes.list=List of recipes
 recipes.prompt=Enter doctor's name
 recipes.message=There's no such doctor
+recipes.client=client
+recipes.drug=drug
+recipes.dose=dose
+recipes.date=expiery date
