correcting mistakes, design

--- a/src/Index_en_US.properties
+++ b/src/Index_en_US.properties
@@ -1,2 +1,3 @@
 index.title=Hello
 index.page=Start page
+index.welcome=Hello! Welcome to my site! Here you can buy drugs. Please, use the menu above.
