--- a/src/properties/Index_en_US.properties
+++ b/src/properties/Index_en_US.properties
@@ -1,3 +1,2 @@
-index.title=Hello
-index.page=Start page
+index.title=Start page
 index.welcome=Hello! Welcome to my site! Here you can buy drugs. Please, use the menu above.
